# python-project-lvl2

./: .codeclimate.yml  .gitignore  .travis.yml  Makefile  README.md  pyproject.toml
gendiff/: __init__.py  cli.py  constants.py  designer.py  engine.py  parser.py
gendiff/format/: __init__.py  cascade.py  human.py  json.py  plain.py
gendiff/render/: __init__.py  cascade_format.py  plain_format.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_gendiff.py
tests/fixtures/: flat_input_1.yml  flat_input_2.yml  nested_cascade_output  nested_json_output.json  t1_before.yml  t1_result  t2_result  t2_result_json
