[tool.poetry]
name = "difference_calculator"
version = "0.1.0"
description = ""
authors = ["aldangold <meloshnikoff@gmail.com>"]
packages = [
  { include = "gendiff" },
]
repository = "https://github.com/aldangold/python-project-lvl2"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.poetry.dependencies]
python = "^3.6"
wemake-python-styleguide = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
